# anydataset

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml  todo.md
docs/: design.md  filter_cache.md  performance.md  provider_service.md  python_compatibility.md  speech_quality.md  translation_quality.md
docs/experiments/: conclusion.md
docs/experiments/results/: 001_runtime_followups.md
docs/experiments/schedules/: 001_runtime_followups.md
examples/: mnist_tse_vs_adam.py  speech_longcat_filter_workflow.py  translation_quality_filter.py
scripts/: benchmark_hot_paths.py  benchmark_provider_server.py  check_release.py
src/anydataset/: __init__.py  _compat.py  _devices.py  _logging.py  _parallel.py  _progress.py  _resume.py  _sharding.py  _validation.py  _version.py  _write_pipeline.py  cache.py  dataset.py  enums.py  mixing.py  provider_service.py  resolver.py  rowmap.py  runtime.py  samples.py  utils.py  view.py
src/anydataset/_io/: __init__.py  atomic.py  parquet.py  shard.py
src/anydataset/adapters/: __init__.py  base.py  catalog.py  esc50.py  fleurs.py  fsd50k.py  huggingface.py  librispeech_asr.py  local_files.py  nsynth.py  unified.py
src/anydataset/api/: __init__.py  cache.py  dataset.py  mixing.py  resolver.py  spec.py  strategy.py
src/anydataset/dataset/: __init__.py  abc.py  collate.py  errors.py  filter.py  multiple.py  speaker.py  write.py
src/anydataset/datasets/: __init__.py  base.py  catalog.py  task_adapters.py
src/anydataset/filter/: __init__.py  _cache.py  _factory.py  _identity.py  _options.py  _resume_writer.py  api.py  apply.py  collect.py  generations.py  resume.py  rules.py  storage.py  types.py
src/anydataset/modalities/: __init__.py  schema.py  view.py
src/anydataset/presets/: __init__.py  cifar10.py  common_voice.py  esc50.py  fleurs.py  fsd50k.py  librispeech_asr.py  mnist.py  nsynth.py  registry.py  wmt19.py
src/anydataset/provider/: __init__.py  abc.py  codec.py  longcat.py  moss_tts.py  qwen_tts.py  whisper.py
src/anydataset/providers/: longcat.py
src/anydataset/quality/: __init__.py  _text.py  rules.py  speech.py  text.py  translation.py
src/anydataset/store/: __init__.py  _batch.py  _config.py  _files.py  _integrity.py  _materializer_fragments.py  _materializer_identity.py  _materializer_resume.py  _materializer_worker.py  _modality.py  _part_commit.py  _part_writer.py  _sample_write.py  _types.py  _view.py  atomic.py  jsonio.py  maintenance.py  manifest.py  manifestio.py  materializer.py  migration.py  parts.py  paths.py  payload.py  reader.py  sampler.py  schema.py  viewwriter.py  writer.py
src/anydataset/tasks/: __init__.py  base.py
src/anydatasets/: __init__.py  cache.py  dataset.py  mixing.py  registry.py
tests/: conftest.py  test_cache.py  test_canonical_dataset.py  test_common_voice_preset.py  test_dataset.py  test_filtered_dataset.py  test_fsd50k_dataset.py  test_fsd50k_preset.py  test_huggingface_dataset.py  test_longcat_provider.py  test_materializer.py  test_materializer_identity.py  test_mixing.py  test_modality_providers.py  test_multiple_dataset.py  test_parallel.py  test_payload_cache.py  test_progress.py  test_provider_service.py  test_registry.py  test_resolver.py  test_resume.py  test_rowmap.py  test_runtime.py  test_sharded_csv_source.py  test_source_registry.py  test_speaker_dataset.py  test_speech_quality.py  test_store.py  test_store_canonical.py  test_store_dataset.py  test_store_maintenance.py  test_store_writer.py  test_task_adapters.py  test_tasks.py  test_translation_quality.py  test_tsv_source.py  test_unified_dataset.py  test_utils.py  test_validation.py  (+1 more)
(+58 files in other folders)
