[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "anydataset"
version = "0.1.0"
description = "PyTorch-first iterable datasets assembled from multiple cached sources."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["torch>=2.0", "pyarrow>=14.0"]

[project.optional-dependencies]
audio = ["torchaudio>=2.0"]
huggingface = ["datasets[audio]>=2.0", "huggingface_hub>=0.20"]
examples = ["tensorboard>=2.0", "torchvision>=0.15"]
test = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["src"]
