[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "anydataset"
version = "1.0.0"
description = "PyTorch-first canonical datasets, cached filters, and materialized views."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch>=2.0", "pyarrow>=14.0", "typing_extensions>=4.0"]
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "rookiejune" },
]
keywords = ["datasets", "pytorch", "cache", "filtering", "multimodal"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
audio = ["torchaudio>=2.0"]
huggingface = ["datasets[audio]>=2.0", "huggingface_hub>=0.20"]
text = ["transformers>=4.30", "sentencepiece>=0.1.99"]
examples = ["tensorboard>=2.0", "torchvision>=0.15"]
test = ["pytest>=8.0"]
dev = [
    "pytest>=8.0",
    "build>=1.0",
    "twine>=5.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "tomli>=2.0; python_version < '3.11'",
]

[project.urls]
Repository = "https://github.com/rookiejune/anydataset"
Issues = "https://github.com/rookiejune/anydataset/issues"

[project.scripts]
anydataset-store = "anydataset.store.maintenance:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.mypy]
python_version = "3.9"
packages = ["anydataset"]
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
